refactor to vue web component; add miragejs api mock

--- a/package.json
+++ b/package.json
@@ -1,35 +1,46 @@
 {
-  "name": "easycredit-tx-manager",
-  "version": "0.1.0",
-  "private": true,
+  "name": "@ratenkaufbyeasycredit/easycredit-merchant-interface",
+  "license": "MIT",
+  "version": "1.1.0",
+  "author": {
+    "name": "NETZKOLLEKTIV GmbH",
+    "email": "kontakt@netzkollektiv.com",
+    "url": "https://netzkollektiv.com/"
+  },
+  "private": false,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/teambank/ratenkaufbyeasycredit-merchant-interface"
+  },
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "yarn build:wc; yarn build:demo",
+    "build:wc": "vue-cli-service build --target wc --name easycredit-merchant --inline-vue 'src/Manager.vue,src/StatusWidget.vue'; rm dist/demo.html",
+    "build:demo": "./bin/build-demo.sh",
     "lint": "vue-cli-service lint"
   },
+  "main": "dist/easycredit-merchant.js",
+  "unpkg": "dist/easycredit-merchant.min.js",
   "dependencies": {
-    "document-register-element": "^1.14.3",
-    "eslint": "^6.8.0",
-    "eslint-plugin-import": "^2.20.0",
-    "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-vue": "^6.1.2",
     "vue": "^2.6.11",
-    "vue-custom-element": "^3.2.12",
     "vue-i18n": "^8.15.3",
     "vuex": "^3.1.2",
-    "webpack": "^4.41.5",
+    "webpack": "^5.37.0",
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
-    "@intlify/vue-i18n-loader": "^0.6.1",
     "@vue/cli-plugin-babel": "^4.1.2",
     "@vue/cli-plugin-eslint": "^4.1.2",
     "@vue/cli-service": "^4.1.2",
-    "@vue/eslint-config-standard": "^5.1.0",
+    "@vue/eslint-config-standard": "^6.0.0",
     "babel-eslint": "^10.0.3",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
+    "eslint": "^7.26.0",
+    "eslint-plugin-import": "^2.23.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-vue": "^7.9.0",
     "fibers": "^4.0.2",
+    "miragejs": "^0.1.41",
     "node-sass": "^4.13.1",
     "sass": "^1.25.0",
     "sass-loader": "^8.0.2",
