--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "main": "dist/easycredit-merchant.js",
   "unpkg": "dist/easycredit-merchant.min.js",
   "dependencies": {
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.16.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.16.0",
     "vue": "^2.6.11",
     "vue-i18n": "^8.15.3",
     "vuex": "^3.1.2",
